syntax = "proto3";

package user;

service UserService {
  rpc Create(CreateUserRequest) returns (UserResponse) {}
  rpc FindAll(Empty) returns (UsersResponse) {}
  rpc FindOne(UserIdRequest) returns (UserResponse) {}
  rpc FindByUsername(UsernameRequest) returns (UserResponse) {}
  rpc Update(UpdateUserRequest) returns (UserResponse) {}
  rpc Remove(UserIdRequest) returns (Empty) {}
}

message Empty {}

message UserIdRequest {
  string id = 1;
}

message UsernameRequest {
  string login = 1;
}

message CreateUserRequest {
  string name = 1;
  string login = 2;
  string password = 3;
  string email = 4;
  string phone = 5;
}

message UpdateUserRequest {
  string id = 1;
  string name = 2;
  string login = 3;
  string password = 4;
  string email = 5;
  string phone = 6;
}

message UserResponse {
  string id = 1;
  string name = 2;
  string login = 3;
  string password = 4;
  string email = 5;
  string phone = 6;
}

message UsersResponse {
  repeated UserResponse users = 1;
}